--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,7 @@ jobs:
         with:
           token: ${{ github.token }}
           state: success
+          deployment-id: ${{ steps.deployment.outputs.deployment_id }}
 
       - name: Update deployment status (failure)
         if: failure()
@@ -49,3 +50,4 @@ jobs:
         with:
           token: ${{ github.token }}
           state: failure
+          deployment-id: ${{ steps.deployment.outputs.deployment_id }}
